--- a/static/views/attractions.pug
+++ b/static/views/attractions.pug
@@ -29,7 +29,7 @@ block append content
 
       div.jumbotron
         h3 This is your current location
-        iframe(width="600" height="450" frameborder="0" src="/current_location_map" allowfullscreen="allowfullscreen")
+        iframe(width="600" height="450" frameborder="0" src="/you_are_here" allowfullscreen="allowfullscreen")
 
       div
         form#attractions-form(action="/directions" method="post")
